kubernetes/homelab/applications/kubewaf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-kubewaf
spec:
  selector:
    app: envoy-kubewaf
  type: ClusterIP
  ports:
  - port: 9099
    targetPort: 9099
