kubernetes/homelab/applications/kubewaf/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubewaf-route
spec:
  parentRefs:
  - name: cilium-gw
    namespace: gateway
    group: gateway.networking.k8s.io	
    kind: Gateway
  hostnames:
  - "waf.k8s.z3cyber.tech"
  rules:
   - backendRefs:
      - name: envoy-kubewaf
        port: 9099
        group: ''	
        kind: Service
        weight: 1	
     matches:	
        - path:	
            type: PathPrefix	
            value: /
